Fix viewport test and change z-index for navBar

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ body {
   position: fixed; 
   width: 100%; 
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, .25);
+  z-index: 1;
 }
 
 .links {
@@ -65,7 +66,7 @@ body {
 
 #welcome-section {
   position: relative;
-  height: 90vh;
+  height: 100vh;
 }
 
 .headers {
